--- a/.config
+++ b/.config
@@ -1,6 +1,39 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt76x8=y
-CONFIG_TARGET_ramips_mt76x8_DEVICE_glinet_gl-mt300n-v2=y
+CONFIG_TARGET_ramips_mt76x8_DEVICE_hilink_hlk-7628n=y
+CONFIG_BUSYBOX_CUSTOM=y
+CONFIG_BUSYBOX_CONFIG_ARP=y
+CONFIG_BUSYBOX_CONFIG_ARPING=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_TELNET_AUTOLOGIN=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_TELNET_TTYPE=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_TELNET_WIDTH=y
+CONFIG_BUSYBOX_CONFIG_TELNET=y
+CONFIG_MT7603E_APCLI_SUPPORT=y
+CONFIG_MT7603E_ATE_SUPPORT=y
+CONFIG_MT7603E_DOT11N_DRAFT3=y
+CONFIG_MT7603E_DOT11W_PMF_SUPPORT=y
+CONFIG_MT7603E_FIRST_IF_EEPROM_FLASH=y
+CONFIG_MT7603E_FIRST_IF_MT7603E=y
+CONFIG_MT7603E_LLTD_SUPPORT=y
+CONFIG_MT7603E_MAC_REPEATER_SUPPORT=y
+CONFIG_MT7603E_MBSS_SUPPORT=y
+CONFIG_MT7603E_MT_MAC=y
+CONFIG_MT7603E_MT_NEW_RATE_ADAPT_SUPPORT=y
+CONFIG_MT7603E_MT_WIFI_MODE_AP=y
+CONFIG_MT7603E_MT_WIFI_PATH="rlt_wifi"
+CONFIG_MT7603E_MULTI_APCLI_SUPPORT=y
+CONFIG_MT7603E_MULTI_INF_SUPPORT=y
+CONFIG_MT7603E_NEW_BW2040_COEXIST_SUPPORT=y
+CONFIG_MT7603E_NEW_RATE_ADAPT_SUPPORT=y
+CONFIG_MT7603E_RALINK_MT7603E=y
+CONFIG_MT7603E_RLT_AP_SUPPORT=y
+CONFIG_MT7603E_RLT_WIFI=y
+CONFIG_MT7603E_RT2860V2_AP_V24_DATA_STRUCTURE=y
+CONFIG_MT7603E_RTMP_FLASH_SUPPORT=y
+CONFIG_MT7603E_RTMP_PCI_SUPPORT=y
+CONFIG_MT7603E_RT_FIRST_CARD_EEPROM="flash"
+CONFIG_MT7603E_UAPSD=y
+CONFIG_MT7603E_WSC_INCLUDED=y
 # CONFIG_PACKAGE_etherwake is not set
 # CONFIG_PACKAGE_ip-full is not set
 # CONFIG_PACKAGE_ipset is not set
@@ -10,6 +43,7 @@ CONFIG_PACKAGE_kmod-iptunnel=y
 CONFIG_PACKAGE_kmod-l2tp=y
 CONFIG_PACKAGE_kmod-l2tp-eth=y
 CONFIG_PACKAGE_kmod-l2tp-ip=y
+CONFIG_PACKAGE_kmod-mt7603e=y
 # CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
 # CONFIG_PACKAGE_kmod-nf-flow is not set
 CONFIG_PACKAGE_kmod-pppol2tp=y
@@ -45,7 +79,6 @@ CONFIG_PACKAGE_luci-i18n-nps-zh-cn=y
 CONFIG_PACKAGE_mac-telnet-client=y
 # CONFIG_PACKAGE_miniupnpd is not set
 # CONFIG_PACKAGE_nlbwmon is not set
-CONFIG_PACKAGE_nmap=y
 CONFIG_PACKAGE_npc=y
 # CONFIG_PACKAGE_pdnsd-alt is not set
 CONFIG_PACKAGE_ppp-mod-pppol2tp=y
@@ -55,3 +88,10 @@ CONFIG_PACKAGE_resolveip=y
 # CONFIG_PACKAGE_vsftpd-alt is not set
 # CONFIG_PACKAGE_wol is not set
 CONFIG_PACKAGE_xl2tpd=y
+CONFIG_TARGET_EXT4_BLOCKSIZE=4096
+CONFIG_TARGET_EXT4_BLOCKSIZE_4K=y
+CONFIG_TARGET_EXT4_RESERVED_PCT=0
+CONFIG_TARGET_ROOTFS_CPIOGZ=y
+CONFIG_TARGET_ROOTFS_EXT4FS=y
+CONFIG_TARGET_ROOTFS_PARTSIZE=160
+CONFIG_TARGET_ROOTFS_TARGZ=y
